# dynawo-mpi

./: CMakeLists.txt  main_mpi.cpp  main_openmp.cpp
